// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidateRecipientAccount renders correctly when full validation required 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
    keyboardShouldPersistTaps="always"
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "paddingVertical": 16,
            }
          }
        >
          confirmAccountNumber.title
        </Text>
        <View>
          <View>
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingBottom": 16,
                }
              }
            >
              confirmAccountNumber.body1Full
            </Text>
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingBottom": 16,
                }
              }
            >
              confirmAccountNumber.body2Full
            </Text>
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingVertical": 8,
                }
              }
            >
              accountInputHeaderFull
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  Object {
                    "backgroundColor": "#FFF",
                    "borderColor": "#D1D5D8",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "flex": 0,
                    "height": 50,
                    "marginVertical": 5,
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                onBlur={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                placeholder="0xf1b1d5a6e7728g309c4a025k122d71ad75a61976"
                rejectResponderTermination={true}
                shouldShowClipboard={[Function]}
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#D1D5D8",
                    "borderRadius": 3,
                    "flex": 1,
                    "fontFamily": "Hind-Regular",
                    "padding": 8,
                  }
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "height": 64,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "paddingVertical": 16,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#1AB775",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="ConfirmAccountButton"
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                confirmAccountNumber.submit
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <svg
          fill="none"
          height={16}
          style={Object {}}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="#2E3338"
            stroke-width="1.25"
            style={Object {}}
          />
          <path
            d="M8 12V7M8 6V5"
            stroke="#2E3338"
            stroke-width="1.25"
            style={Object {}}
          />
        </svg>
        <Text
          onPress={[Function]}
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingLeft": 8,
              "textDecorationLine": "underline",
            }
          }
        >
          confirmAccountNumber.help
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={true}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      statusBarTranslucent={true}
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <RNCSafeAreaView>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "padding": 16,
              },
              Object {
                "borderRadius": 8,
              },
              Object {
                "elevation": 12,
                "shadowColor": "rgba(156, 164, 169, 0.4)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "maxHeight": "100%",
                  "padding": 24,
                },
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Jost-Medium",
                "fontSize": 22,
                "lineHeight": 28,
                "paddingBottom": 4,
                "textAlign": "center",
              }
            }
          >
            helpModal.header
          </Text>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "paddingVertical": 8,
                "textAlign": "center",
              }
            }
          >
            helpModal.body1
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingHorizontal": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 4,
                    "elevation": 12,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "black",
                    "shadowOffset": Object {
                      "height": 6,
                      "width": 0,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 9.600000000000001,
                    "width": 32,
                  }
                }
              >
                <svg
                  fill="none"
                  height="32"
                  viewBox="0 0 32 32"
                  width="32"
                >
                  <line
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeWidth="2.5"
                    x1="7.25"
                    x2="24.75"
                    y1="9.75"
                    y2="9.75"
                  />
                  <line
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeWidth="2.5"
                    x1="7.25"
                    x2="24.75"
                    y1="15.75"
                    y2="15.75"
                  />
                  <line
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeWidth="2.5"
                    x1="7.25"
                    x2="24.75"
                    y1="21.75"
                    y2="21.75"
                  />
                </svg>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingHorizontal": 8,
                }
              }
            >
              Menu
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "paddingVertical": 8,
                "textAlign": "center",
              }
            }
          >
            helpModal.body2
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "padding": 16,
                  },
                  Object {
                    "borderRadius": 8,
                  },
                  Object {
                    "elevation": 12,
                    "shadowColor": "rgba(156, 164, 169, 0.4)",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 12,
                  },
                  Array [
                    Object {
                      "justifyContent": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "width": 215,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  0x f1b1 d5a6 e772 8g30 9c4a
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  025k 122d 71ad 75a6 1976
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingTop": 16,
                  "paddingVertical": 16,
                  "textAlign": "center",
                }
              }
            >
              helpModal.body3
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-evenly",
                "paddingVertical": 24,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#1AB775",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:dismiss
              </Text>
            </View>
          </View>
        </View>
      </RNCSafeAreaView>
    </View>
  </Modal>
</RNCSafeAreaView>
`;

exports[`ValidateRecipientAccount renders correctly when partial validation required 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
    keyboardShouldPersistTaps="always"
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "paddingVertical": 16,
            }
          }
        >
          confirmAccountNumber.title
        </Text>
        <View>
          <View>
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingBottom": 16,
                }
              }
            >
              confirmAccountNumber.bodyPartial
            </Text>
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingVertical": 8,
                }
              }
            >
              accountInputHeaderPartial
            </Text>
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "paddingRight": 8,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#FFF",
                        "borderColor": "#D1D5D8",
                        "borderRadius": 3,
                        "borderWidth": 1,
                        "flex": 0,
                        "height": 50,
                        "marginVertical": 5,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <TextInput
                    allowFontScaling={true}
                    maxLength={1}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    placeholder="k"
                    rejectResponderTermination={true}
                    style={
                      Object {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#D1D5D8",
                        "borderRadius": 3,
                        "flex": 1,
                        "fontFamily": "Hind-Regular",
                        "padding": 8,
                      }
                    }
                    underlineColorAndroid="transparent"
                    value=""
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "paddingRight": 8,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#FFF",
                        "borderColor": "#D1D5D8",
                        "borderRadius": 3,
                        "borderWidth": 1,
                        "flex": 0,
                        "height": 50,
                        "marginVertical": 5,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <TextInput
                    allowFontScaling={true}
                    maxLength={1}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    placeholder="0"
                    rejectResponderTermination={true}
                    style={
                      Object {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#D1D5D8",
                        "borderRadius": 3,
                        "flex": 1,
                        "fontFamily": "Hind-Regular",
                        "padding": 8,
                      }
                    }
                    underlineColorAndroid="transparent"
                    value=""
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "paddingRight": 8,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#FFF",
                        "borderColor": "#D1D5D8",
                        "borderRadius": 3,
                        "borderWidth": 1,
                        "flex": 0,
                        "height": 50,
                        "marginVertical": 5,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <TextInput
                    allowFontScaling={true}
                    maxLength={1}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    placeholder="F"
                    rejectResponderTermination={true}
                    style={
                      Object {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#D1D5D8",
                        "borderRadius": 3,
                        "flex": 1,
                        "fontFamily": "Hind-Regular",
                        "padding": 8,
                      }
                    }
                    underlineColorAndroid="transparent"
                    value=""
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "paddingRight": 8,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#FFF",
                        "borderColor": "#D1D5D8",
                        "borderRadius": 3,
                        "borderWidth": 1,
                        "flex": 0,
                        "height": 50,
                        "marginVertical": 5,
                        "width": 50,
                      },
                    ]
                  }
                >
                  <TextInput
                    allowFontScaling={true}
                    maxLength={1}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    placeholder="4"
                    rejectResponderTermination={true}
                    style={
                      Object {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#D1D5D8",
                        "borderRadius": 3,
                        "flex": 1,
                        "fontFamily": "Hind-Regular",
                        "padding": 8,
                      }
                    }
                    underlineColorAndroid="transparent"
                    value=""
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "height": 64,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "paddingVertical": 16,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#1AB775",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="ConfirmAccountButton"
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                confirmAccountNumber.submit
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <svg
          fill="none"
          height={16}
          style={Object {}}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="#2E3338"
            stroke-width="1.25"
            style={Object {}}
          />
          <path
            d="M8 12V7M8 6V5"
            stroke="#2E3338"
            stroke-width="1.25"
            style={Object {}}
          />
        </svg>
        <Text
          onPress={[Function]}
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingLeft": 8,
              "textDecorationLine": "underline",
            }
          }
        >
          confirmAccountNumber.help
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={true}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      statusBarTranslucent={true}
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <RNCSafeAreaView>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "padding": 16,
              },
              Object {
                "borderRadius": 8,
              },
              Object {
                "elevation": 12,
                "shadowColor": "rgba(156, 164, 169, 0.4)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 12,
              },
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                  "maxHeight": "100%",
                  "padding": 24,
                },
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Jost-Medium",
                "fontSize": 22,
                "lineHeight": 28,
                "paddingBottom": 4,
                "textAlign": "center",
              }
            }
          >
            helpModal.header
          </Text>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "paddingVertical": 8,
                "textAlign": "center",
              }
            }
          >
            helpModal.body1
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingHorizontal": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 4,
                    "elevation": 12,
                    "height": 32,
                    "justifyContent": "center",
                    "shadowColor": "black",
                    "shadowOffset": Object {
                      "height": 6,
                      "width": 0,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 9.600000000000001,
                    "width": 32,
                  }
                }
              >
                <svg
                  fill="none"
                  height="32"
                  viewBox="0 0 32 32"
                  width="32"
                >
                  <line
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeWidth="2.5"
                    x1="7.25"
                    x2="24.75"
                    y1="9.75"
                    y2="9.75"
                  />
                  <line
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeWidth="2.5"
                    x1="7.25"
                    x2="24.75"
                    y1="15.75"
                    y2="15.75"
                  />
                  <line
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeWidth="2.5"
                    x1="7.25"
                    x2="24.75"
                    y1="21.75"
                    y2="21.75"
                  />
                </svg>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingHorizontal": 8,
                }
              }
            >
              Menu
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "paddingVertical": 8,
                "textAlign": "center",
              }
            }
          >
            helpModal.body2
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "padding": 16,
                  },
                  Object {
                    "borderRadius": 8,
                  },
                  Object {
                    "elevation": 12,
                    "shadowColor": "rgba(156, 164, 169, 0.4)",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 12,
                  },
                  Array [
                    Object {
                      "justifyContent": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "width": 215,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  0x f1b1 d5a6 e772 8g30 9c4a
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  025k 122d 71ad 75a6 1976
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingTop": 16,
                  "paddingVertical": 16,
                  "textAlign": "center",
                }
              }
            >
              helpModal.body3
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-evenly",
                "paddingVertical": 24,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#1AB775",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:dismiss
              </Text>
            </View>
          </View>
        </View>
      </RNCSafeAreaView>
    </View>
  </Modal>
</RNCSafeAreaView>
`;
